@@ -14,12 +14,19 @@ But when trying to add files i get:
 
 I have tried both using bind-mount and with a sym-link.
 
-> I don't think this was a reversion; the forum post doesn't really
-> indicate it ever worked.
-> 
 > Grepping for `renameFile` and `createLink` will find all the places
 > in git-annex that assume one filesystem. These would have to be changed
 > to catch errors and fall back to expensive copying.
 > 
 > Putting a separate repository on the file server could work better
 > depending on what you're trying to do. --[[Joey]] 
+
+>> I've added support for putting `.git/annex` on a separate filesystem
+>> from the rest of the git repository.
+>> 
+>> Putting individual subdirectories like `.git/annex/objects` on separate
+>> filesystems from other subdirectories is not fully supported; it may
+>> work but it may be slow and a few things (like `git annex migrate`) are
+>> known to fail due to using hard links. I don't think this is worth
+>> supporting. [[done]]
+>> --[[Joey]]
